talk: more corrections at final slides, adding biblatex bibliography

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -44,6 +44,15 @@
     issn = {1559-8616},
 }
 
+@article{Walter2009a-short,
+    Author = {Gero Walter and Thomas Augustin},
+    Title = {Imprecision and Prior-data Conflict in Generalized {B}ayesian Inference},
+    Journal = {Journal of Statistical Theory and Practice},
+    Pages = {255--271},
+    Volume = {3},
+    Year = {2009},
+}
+
 @TECHREPORT{Walter2009b,
   author = {Gero Walter and Thomas Augustin},
   year = 2009,
