--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -79,3 +79,12 @@
   number = {1},
   pages = {3--34}
 }
+
+@article{2006:evans,
+    Author = {M. Evans and H. Moshonov},
+    Journal = {Bayesian Analysis},
+    Pages = {893--914},
+    Title = {Checking for Prior-Data Conflict},
+    Volume = {1},
+    Year = {2006},
+}
