talk: some more references, minor corrections

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -62,11 +62,22 @@
     Title = {Imprecise probability models for inference in exponential families},
     Year = {2005}}
 
+@inproceedings{2005:quaeghebeurcooman-short,
+    Address = {Manno},
+    Author = {Quaeghebeur, E. and de Cooman, G.},
+    Booktitle = {ISIPTA '05},
+    Editor = {Cozman, F. and Nau, R. and Seidenfeld, T.},
+    Pages = {287--296},
+    Publisher = {SIPTA},
+    Title = {Imprecise probability models for inference in exponential families},
+    Year = {2005}}
+
 @book{1991:walley,
   author = {Peter Walley},
   title = {Statistical Reasoning with Imprecise Probabilities},
   publisher = {Chapman and Hall},
   address = {London},
+  ISBN={0-412-28660-2},
   year = {1991},
 }
 
