talk: boatshape graph included

--- a/talk/talk.tex
+++ b/talk/talk.tex
@@ -1140,6 +1140,11 @@ parameter set shape enabling\ldots
 \end{itemize}
 %This work uses 
 via a different parametrisation of priors suggested by Mik Bickis % (in preparation)
+%\hspace*{-2ex}%
+\vspace*{-7ex}%
+\begin{center}
+\includegraphics[scale=0.63]{../../../boatshape/R/boatshape/boatshape-talk130306.pdf}
+\end{center}
 
 }
 
@@ -1148,20 +1153,20 @@ via a different parametrisation of priors suggested by Mik Bickis % (in preparat
 \frame{\frametitle{Conclusion}
 
 \begin{itemize}
-\item Conjugate priors are a convenient tool for Bayesian inference\\ but have some pitfalls
+\item Conjugate priors are a convenient tool for Bayesian inference\\ but there are some pitfalls
  \begin{itemize}
  \item Hyperparameters are easy to interpret and elicit
  \item Averaging property makes calculations simple,\\
  but inadequate model behaviour in case of \pdc
  \end{itemize}
-\item Sets of conjugate priors maintain advantages \& mitigate pitfalls %find a sweet spot in between
+\item Sets of conjugate priors maintain advantages \& mitigate issues %find a sweet spot in between
  \begin{itemize}
  \item Hyperparameter set shape is important %a crucial modeling choice
  \item Reasonable choice: \emph{rectangular} $\PZc = [\nzlg, \nzug] \times [\yzlr, \yzur]$
  \item Bounds for hyperparameters easy to interpret and elicit
  \item Additional imprecison in case of \pdc\\
  leads to cautious inferences if, and only if, caution is needed
- \item Shape for less imprecision for strong prior-data agreement is in development
+ \item Shape for less imprecision in case of strong prior-data agreement is in development
  \end{itemize}
 \end{itemize}
 
